# Image_to_3D

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: agent-memories.md  code-audit.md  code-plan.md  feature-part-editing.md  fix-reselection-blocked-by-tc-pickers.md  fix-selection-raycasting.md  implementation-plan.md  issue-elements-not-selectable.md  issue-group-selection.md  plan-scene-hierarchy-panel.md  plan-shift-click-custom-groups.md  plan-vanilla-drag-alignment.md  strategy-local-frontend.md
examples/: decode_prompt.txt  example1.html  example2.html  scene (1).json  scene.json  testthreejs.html
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: DebugPanel.tsx  ModelLibrary.tsx  PartProperties.tsx  SceneHierarchy.tsx  StatusBar.tsx  ToolBar.tsx  UploadPanel.tsx
frontend/src/hooks/: useModels.ts  usePartEditor.ts
frontend/src/three/: CanvasErrorBoundary.tsx  GroundGrid.tsx  Lighting.tsx  ModelGroup.tsx  PartGroup.tsx  SceneCanvas.tsx  ScenePart.tsx  geometryFactory.ts  resolveColor.ts  useSceneDrag.ts  useSceneRaycast.ts
frontend/src/utils/: groupParts.ts
src/renderer/: __init__.py  database.py  extractor.py  models.py  prompt.py  server.py
