[project]
name = "2026-03030-vml-3d-renderer"
version = "0.1.0"
description = "LLM-powered image-to-3D scene pipeline using Gemini and Three.js"
authors = [
    {name = "VML Dev Team"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi>=0.111.0,<1.0.0",
    "uvicorn[standard]>=0.29.0,<1.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "google-generativeai>=0.7.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "sqlmodel>=0.0.19,<1.0.0",
    "slowapi>=0.1.9,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0,<1.0.0",
    "mypy>=1.10.0,<2.0.0",
]

[project.scripts]
renderer = "renderer.server:start"

[tool.poetry]
packages = [{include = "renderer", from = "src"}]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]  # Depends() and File() in FastAPI defaults is the standard pattern

[tool.ruff.lint.per-file-ignores]
"src/renderer/server.py" = ["B904"]  # HTTPException re-raises don't need 'from' chains

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
